# clido

./: .gitignore  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  tarpaulin.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/clido-agent/: Cargo.toml
crates/clido-checkpoint/: Cargo.toml
crates/clido-checkpoint/src/: lib.rs
crates/clido-cli/: Cargo.toml
crates/clido-context/: Cargo.toml
crates/clido-core/: Cargo.toml
crates/clido-index/: Cargo.toml
crates/clido-memory/: Cargo.toml
crates/clido-planner/: Cargo.toml
crates/clido-providers/: Cargo.toml
crates/clido-storage/: Cargo.toml
crates/clido-tools/: Cargo.toml
crates/clido-tools/src/: apply_patch_tool.rs  bash.rs  diagnostics.rs  edit.rs  exit_plan_mode.rs  file_tracker.rs  git_tool.rs  glob_tool.rs  grep_tool.rs  lib.rs  ls_tool.rs  mcp.rs  multi_edit.rs  path_guard.rs  read.rs  registry.rs  secrets.rs  semantic_search.rs  test_loop.rs  test_runner.rs  todo_write.rs  truncate.rs  web_fetch.rs  web_search.rs  write.rs
crates/clido-workflows/: Cargo.toml
devdocs/: README.md
devdocs/algorithms/: context-compaction.md
devdocs/guides/: ci-and-release.md  contributor-test-matrix.md  implementation-bootstrap.md  local-development-testing.md  platform-support.md  pricing-and-offline.md  security-model.md  (+2 more)
devdocs/plans/: development-plan.md  (+1 more)
doc/: architecture.md
docs/: index.md  package-lock.json  package.json
scripts/: generate-dod-md.sh  install.sh  run-in-test-env.sh  verify-dod.sh
(+161 files in other folders)
